--- a/.github/workflows/userfetch.yml
+++ b/.github/workflows/userfetch.yml
@@ -28,7 +28,7 @@ jobs:
           config: 'userfetch/config_light.mjs'
           svg: 'userfetch/info_light.svg'
         env:
-          github_token: ${{ secrets.GH_PAT }}
+          github_token: ${{ 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 }}
 
       - name: commit
         run: |
